added react components

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hello World</h1>
-  <script src="script.js"></script>
+  <div id="root">
+    <h1>Not rendered</h1>
+  </div>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
