--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <div id="root">
     <h1>Not rendered</h1>
   </div>
-  <script type="module" src="script.js"></script>
+  <script type="module" src="src/script.js"></script>
 </body>
 </html>
